=================
nik2img changelog
=================

Version 0.2.3,             2009:
--------------------------------

* Fixed bug in zoom levels code (thanks aub)

* Added support for the Mapnik ProjTransform class (http://trac.mapnik.org/ticket/117)

 ^^^^^^^^ requires mapnik 0.6.0 and above ^^^^^^^^

* Added workaround for binary printing on win32 (thanks crschmidt for the solution and aled for reporting)

* Added alpha support for loading map definitions from a python script given a mapnik.Map variable called 'm'

* Added a 10 second timeout when fetching projections from spatialreference.org

* Made warnings only print to STDOUT if verbose = True

* Added more debugging of rules and styles

* Now looks for projection strings in the full mapnik proj_init syntax (ie '+init=epsg:<code>')

* Default image opening now off for linux (unless --app is used), still attempted by default on osx and win32.


Version 0.2.2, 30 November 2008:
--------------------------------

* Packaged from revision 400 in Subversion.

* Added tests that produce map graphics output

* Fixed variable scope problem when checking for Cairo support

* Fixed several bugs related to writing output files within nested folders

* Switched default format back to png (rather than png256)


Version 0.2.1, 9 November 2008:
--------------------------------

* Fixed bug in rendering when specific layers are requested with the -l flag

* Added ability to specify the application with which to open the output graphic using the --app flag



Version 0.2.0, 5 November 2008:
--------------------------------

* Packaged from revision 283 in Subversion.

* Cairo file formats support added (svg,pdf,ps)

* Program mainline is now a class that can be initialized as a module import allowing non-command-line usage

* Fixed up buggy zoom levels code.

* Fixed countless bugs in projection handling, format output, and error handling.
